--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,17 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
+  flutter_map: ^3.0.0
+  geolocator: ^9.0.1
+  google_maps_flutter: ^2.2.0
+  image_picker: ^0.8.5+3
   intl: ^0.17.0
   json_serializable: ^6.3.1
+  location: ^4.2.0
+  path: ^1.8.2
+  path_provider: ^2.0.11
   provider: ^6.0.3
+  sqflite: ^2.0.3+1
 
 dev_dependencies:
   bloc_test: ^9.1.0
